# advent-of-code-rust-2023

./: Cargo.toml  Justfile  README.md
day1/: Cargo.toml
day1/benches/: bench.rs
day1/src/: lib.rs  main.rs
day2/: Cargo.toml  README.md
day2/benches/: bench.rs
day2/src/: lib.rs  main.rs  nom_version.rs  regex_version.rs
day4/: Cargo.toml  bacon.toml
day4/benches/: bench.rs
day4/src/: lib.rs  main.rs
template/: Cargo.toml
template/benches/: bench.rs
template/src/: lib.rs  main.rs
