[workspace]
resolver = "2"
members = ["day*"]

[workspace.package]
version = "0.1.0"
authors = ["Josh McKinney"]
description = "Advent of Code 2023 solutions"
repository = "https://github.com/joshka/advent-of-code-2023"
license = "MIT"
edition = "2021"
rust-version = "1.74.0"
publish = false

[workspace.dependencies]
color-eyre = "0.6.2"
itertools = "0.12.0"
divan = "0.1.3"
nom = "7.1.3"
regex = "1.10.2"
rstest = "0.18.2"
