[package]
name = "day1"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
dependencies.workspace = true

[dependencies]
color-eyre = { workspace = true }
itertools = { workspace = true }
aho-corasick = "1.1.2"
